{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 60,
  "lineage": "57242567-8ae2-a868-fe8d-c6b1630b26cc",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "user10nic1",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user10-rg/providers/Microsoft.Network/networkInterfaces/user10nic1",
            "ip_configuration": [
              {
                "name": "user10ip1",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user10-rg/providers/Microsoft.Network/publicIPAddresses/user10-PublicIP",
                "subnet_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user10-rg/providers/Microsoft.Network/virtualNetworks/user10-Vnet/subnets/user10-SubnetA"
              }
            ],
            "location": "koreasouth",
            "name": "user10nic1",
            "network_security_group_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user10-rg/providers/Microsoft.Network/networkSecurityGroups/user10SecurityGroup",
            "private_ip_address": "4.0.1.4",
            "private_ip_addresses": [
              "4.0.1.4"
            ],
            "resource_group_name": "user10-rg"
          },
          "depends_on": [
            "azurerm_network_security_group.user10nsg",
            "azurerm_public_ip.user10-PublicIP",
            "azurerm_subnet.user10-SubnetA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "user10nic2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user10-rg/providers/Microsoft.Network/networkInterfaces/user10nic2",
            "ip_configuration": [
              {
                "name": "user10ip2",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user10-rg/providers/Microsoft.Network/publicIPAddresses/user10-PublicIP2",
                "subnet_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user10-rg/providers/Microsoft.Network/virtualNetworks/user10-Vnet/subnets/user10-SubnetB"
              }
            ],
            "location": "koreasouth",
            "name": "user10nic2",
            "network_security_group_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user10-rg/providers/Microsoft.Network/networkSecurityGroups/user10SecurityGroup",
            "private_ip_address": "4.0.2.4",
            "private_ip_addresses": [
              "4.0.2.4"
            ],
            "resource_group_name": "user10-rg"
          },
          "depends_on": [
            "azurerm_network_security_group.user10nsg2",
            "azurerm_public_ip.user10-PublicIP2",
            "azurerm_subnet.user10-SubnetB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "user10nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user10-rg/providers/Microsoft.Network/networkSecurityGroups/user10SecurityGroup",
            "location": "koreasouth",
            "name": "user10SecurityGroup",
            "resource_group_name": "user10-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 2001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "user10 Terraform Demo"
            }
          },
          "depends_on": [
            "azurerm_resource_group.user10-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "user10nsg2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user10-rg/providers/Microsoft.Network/networkSecurityGroups/user10SecurityGroup",
            "location": "koreasouth",
            "name": "user10SecurityGroup",
            "resource_group_name": "user10-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 3306,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "user10 Terraform Demo"
            }
          },
          "depends_on": [
            "azurerm_resource_group.user10-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "user10-PublicIP",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user10-rg/providers/Microsoft.Network/publicIPAddresses/user10-PublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "koreasouth",
            "name": "user10-PublicIP",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "user10-rg",
            "sku": "Basic",
            "tags": {
              "environment": "user10 Terraform Demo"
            }
          },
          "depends_on": [
            "azurerm_resource_group.user10-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "user10-PublicIP2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user10-rg/providers/Microsoft.Network/publicIPAddresses/user10-PublicIP2",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "koreasouth",
            "name": "user10-PublicIP2",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "user10-rg",
            "sku": "Basic",
            "tags": {
              "environment": "user10 Terraform Demo"
            }
          },
          "depends_on": [
            "azurerm_resource_group.user10-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "user10-SubnetA",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "4.0.1.0/24",
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user10-rg/providers/Microsoft.Network/virtualNetworks/user10-Vnet/subnets/user10-SubnetA",
            "name": "user10-SubnetA",
            "resource_group_name": "user10-rg",
            "virtual_network_name": "user10-Vnet"
          },
          "depends_on": [
            "azurerm_resource_group.user10-rg",
            "azurerm_virtual_network.user10-Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "user10-SubnetB",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "4.0.2.0/24",
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user10-rg/providers/Microsoft.Network/virtualNetworks/user10-Vnet/subnets/user10-SubnetB",
            "name": "user10-SubnetB",
            "resource_group_name": "user10-rg",
            "virtual_network_name": "user10-Vnet"
          },
          "depends_on": [
            "azurerm_resource_group.user10-rg",
            "azurerm_virtual_network.user10-Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "user10-Vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "4.0.0.0/16"
            ],
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user10-rg/providers/Microsoft.Network/virtualNetworks/user10-Vnet",
            "location": "koreasouth",
            "name": "user10-Vnet",
            "resource_group_name": "user10-rg",
            "tags": {
              "environment": "User10 Terraform Demo"
            }
          },
          "depends_on": [
            "azurerm_resource_group.user10-rg"
          ]
        }
      ]
    }
  ]
}